Fix language file

--- a/language/mn.json
+++ b/language/mn.json
@@ -1,9 +1,11 @@
 {
   "semantics": [
     {
+      "label": "Гурван зураг засварлагч",
       "fields": [
         {
           "label": "Үзэгдэл",
+          "entity": "Үзэгдэл",
           "field": {
             "fields": [
               {
@@ -81,11 +83,14 @@
                           "description": "Хэрэв нуусан бол шошгууд зөвхөн хулганаар дээш харагдана"
                         }
                       ]
-                    }
+                    },
+                    {},
+                    {}
                   ]
                 }
               },
               {
+                "label": "Товчлуурын загвар",
                 "description": "Энэ үзэгдэл рүү чиглэсэн товчлуурууд хэрхэн харагдахыг шийдээрэй. Хөдөлгөөнгүй, шинэ үзэгдлүүдэд хүргэдэггүй үзэгдлүүдийн хувьд \"Дэлгэрэнгүй мэдээлэл\" товчийг санал болгож байна.",
                 "options": [
                   {
@@ -94,23 +99,20 @@
                   {
                     "label": "Дэлгэрэнгүй мэдээлэл (нэмэх)"
                   }
-                ],
-                "label": "Товчлуурын загвар"
+                ]
               },
               {
                 "description": "Энэ үзэгдэлд тохирсон аудио бичлэг нэмнэ үү.",
                 "label": "Аудио зам"
               }
             ]
-          },
-          "entity": "Үзэгдэл"
+          }
         },
         {},
         {
           "label": "Аудио зам"
         }
-      ],
-      "label": "Гурван зураг засварлагч"
+      ]
     },
     {
       "label": "Зан үйлийн тохиргоо",
