Fix missing entity of list field in semantics.json

--- a/language/.en.json
+++ b/language/.en.json
@@ -37,6 +37,7 @@
               },
               {},
               {
+                "entity": "interaction",
                 "field": {
                   "fields": [
                     {
