--- a/language/it.json
+++ b/language/it.json
@@ -37,6 +37,7 @@
               },
               {},
               {
+                "entity": "interaction",
                 "field": {
                   "fields": [
                     {
